--- a/SGFramework/SGFramework.csproj
+++ b/SGFramework/SGFramework.csproj
@@ -12,48 +12,17 @@
         <Copyright>R-Koubou</Copyright>
         <RepositoryType>git</RepositoryType>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <Description>Generating code of value object by C# 9.0 SourceGenerator</Description>
+        <Description>Lightweight C#9.0 SourceGenerator Framework</Description>
         <PackageProjectUrl>https://github.com/r-koubou/SGFramework</PackageProjectUrl>
         <RepositoryUrl>https://github.com/r-koubou/SGFramework.git</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
         <None Include="$(OutputPath)\$(AssemblyName).dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-        <None Update="Sample\ValueObject\ValueObjectAttributeTemplate.tt">
-          <Generator>TextTemplatingFilePreprocessor</Generator>
-          <LastGenOutput>ValueObjectAttributeTemplate.cs</LastGenOutput>
-        </None>
-        <None Update="Sample\ValueObject\ValueObjectTemplate.tt">
-          <Generator>TextTemplatingFilePreprocessor</Generator>
-          <LastGenOutput>ValueObjectTemplate.cs</LastGenOutput>
-        </None>
-        <None Update="Sample\ValueObject\ValueRangeAttributeTemplate.tt">
-          <Generator>TextTemplatingFilePreprocessor</Generator>
-          <LastGenOutput>ValueRangeAttributeTemplate.cs</LastGenOutput>
-        </None>
     </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.8.0" PrivateAssets="all" />
-        <PackageReference Include="System.CodeDom" Version="5.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Compile Update="Sample\ValueObject\ValueObjectAttributeTemplate.cs">
-        <AutoGen>True</AutoGen>
-        <DesignTime>True</DesignTime>
-        <DependentUpon>ValueObjectAttributeTemplate.tt</DependentUpon>
-      </Compile>
-      <Compile Update="Sample\ValueObject\ValueObjectTemplate.cs">
-        <AutoGen>True</AutoGen>
-        <DesignTime>True</DesignTime>
-        <DependentUpon>ValueObjectTemplate.tt</DependentUpon>
-      </Compile>
-      <Compile Update="Sample\ValueObject\ValueRangeAttributeTemplate.cs">
-        <AutoGen>True</AutoGen>
-        <DesignTime>True</DesignTime>
-        <DependentUpon>ValueRangeAttributeTemplate.tt</DependentUpon>
-      </Compile>
     </ItemGroup>
 
 </Project>
