--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -23,6 +23,6 @@ jobs:
       with:
         name: nuget
         path: ./publish/
-    - run: dotnet nuget publish/*.nupkg -k $NUGET_API_TOKEN -s https://api.nuget.org/v3/index.json
+    - run: dotnet nuget push publish/*.nupkg -k $NUGET_API_TOKEN -s https://api.nuget.org/v3/index.json
       env:
         NUGET_API_TOKEN: ${{ secrets.NUGET_API_TOKEN }}
